# rust-shuttle-axum

./: .gitignore  Cargo.toml
src/: error.rs  main.rs  porto.rs  remote_work.rs  utils.rs
src/porto/: notion_contact.rs  notion_porto.rs
src/remote_work/: begin_opt.rs  html_parse.rs  mapped_detail.rs  parse_xml.rs
