[package]
name = "shuttle-be"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
eyre = "0.6.11"
reqwest = "0.11.23"
rss = "2.0.6"
scraper = "0.18.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
shuttle-secrets = "0.35.2"
tokio = "1.28.2"
tracing = "0.1.40"
